# gcp_task

./: .dockerignore  .env.docker  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
app/: celery.py  google_services.py  settings.py  urls.py  utils.py
core/: internal.py  models.py  tasks.py  urls.py  utils.py  views.py
